Removed all <br/> tags from m.band_saw.htm,m.cold_saws.htm,m.double_column_band_saw.htm, m.ironworker.htm,m.line_boring.htm

--- a/m.double_column_band_saw.htm
+++ b/m.double_column_band_saw.htm
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>Double Column Band Saw Machines</title>
-	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta name="Description" CONTENT="Twin Post Band Saw Machines for very straight cutting of large pipe and structural shapes. Sold by American Machine Tools Company">
 	<meta name="Keywords" CONTENT="double, column, twin, dual, 2, post, bandsaw, band, saw">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -453,15 +453,15 @@
 						
                         <h3>Twin Post Band Saw model B-25</h3>
                        <p>
-                           <img src="http://www.americanmachinetools.com/images/dual_column_B25.jpg" alt="Double Column Band Saw WF Wells W-9-1 made in USA"><br/>
+                           <span class="span-content"><img src="http://www.americanmachinetools.com/images/dual_column_B25.jpg" alt="Double Column Band Saw WF Wells W-9-1 made in USA"></span>
 							<b>WF Wells B25-1 base model</b>
                         </p>
 						<p>
-                           <img src="http://www.americanmachinetools.com/images/dual_column_B25-3.jpg" alt="Double Column Band Saw WF Wells W-9-1 made in USA"><br/>
+                           <span class="span-content"><img src="http://www.americanmachinetools.com/images/dual_column_B25-3.jpg" alt="Double Column Band Saw WF Wells W-9-1 made in USA"></span>
 							<b>WF Wells B25-3 with hydraulic controls</b>
                         </p>
 						<p>
-                           <img src="http://www.americanmachinetools.com/images/dual_post_b25-3c.jpg" alt="Double Column Band Saw WF Wells W-9-1 made in USA"><br/>
+                           <span class="span-content"><img src="http://www.americanmachinetools.com/images/dual_post_b25-3c.jpg" alt="Double Column Band Saw WF Wells W-9-1 made in USA"></span>
 							<b >Rear View of B25-3C with hydraulics and 6° Cant</b>
                         </p>
                         <p class="bold-text">
@@ -543,11 +543,11 @@
 						
                         <h3>Double Column BandSaw model S-40</h3>
                       <p>
-                           <img src="http://www.americanmachinetools.com/images/dual_column_B25-3.jpg" alt="Double Column Band Saw WF Wells W-9-1 made in USA"><br/>
+                           <span class="span-content"><img src="http://www.americanmachinetools.com/images/dual_column_B25-3.jpg" alt="Double Column Band Saw WF Wells W-9-1 made in USA"></span>
 							<b>WF Wells S-40-3 front view</b>
                         </p>
 						<p>
-                           <img src="http://www.americanmachinetools.com/images/dual_column_B25-3.jpg" alt="Double Column Band Saw WF Wells W-9-1 made in USA"><br/>
+                          <span class="span-content"> <img src="http://www.americanmachinetools.com/images/dual_column_B25-3.jpg" alt="Double Column Band Saw WF Wells W-9-1 made in USA"></span>
 							<b>WF Wells S-40-3 rear view</b>
                         </p>
                         <p class="bold-text">
@@ -786,33 +786,33 @@ Powered by a 5 Hp motor that drives the blade and hydraulic system. Using this s
                </p>
             </div>
             <div class="footer-mid">
-                <b class="footer-mid-amt">American Machine Tools Corp</b><br/>
-                5864 Northwest Hwy<br/>
-                Chicago IL 60631 USA<br/>
-                Phone: 773-334-5000<br/>
+                <span class="span-content"><b class="footer-mid-amt">American Machine Tools Corp</b></span>
+                <span class="span-content">5864 Northwest Hwy</span>
+                <span class="span-content">Chicago IL 60631 USA</span>
+                <span class="span-content">Phone: 773-334-5000</span>
                 Fax: 773-442-0314
                 <p>
                     <a href="http://www.americanmachinetools.com/RFQespanol.asp?model=Catalog+and+Saws+Information+Request"><b>Click to email Us</b></a>
                 </p>
             </div>
             <div class="footer-mid">
-                <a href="http://www.americanmachinetools.com/privacy.htm"><b>Privacy Clause</b></a><br/>
+                <span class="span-content"><a href="http://www.americanmachinetools.com/privacy.htm"><b>Privacy Clause</b></a></span>
                 <a href="http://www.americanmachinetools.com/machinery_safety.htm"><b>SAFETY</b></a>
             </div>
             <div class="footer-mid">
-                <a href="http://www.americanmachinetools.com/terms.htm"><b>Terms &amp; Conditions</b></a><br/>
+                <span class="span-content"><a href="http://www.americanmachinetools.com/terms.htm"><b>Terms &amp; Conditions</b></a></span>
                 <a href="http://www.americanmachinetools.com/FAQ.htm" target="FAQ"><b>Frequently Asked Questions</b></a>
             </div>
             <div class="footer-mid">
-                Website by HumCommerce.com<br/>
-                Copyright &copy; 2001-2017<br/>
-                American Machine Tools Co.<br/>
+                <span class="span-content">Website by HumCommerce.com</span>
+                <span class="span-content">Copyright &copy; 2001-2017</span>
+                <span class="span-content">American Machine Tools Co.</span>
                 All Rights Reserved
             </div>
             <div class="footer-end">
-                Information and prices on this website is subject to change without notice.<br/>
-                Offers from American Machine Tools Corporation include include Terms and Conditions shown on our website.<br/>
-                Liability is strictly limited to those warranties of fitness for purpose and safety as provided by the manufacturer.<br/>
+                <span class="span-content">Information and prices on this website is subject to change without notice.</span>
+                <span class="span-content">Offers from American Machine Tools Corporation include include Terms and Conditions shown on our website.</span>
+                <span class="span-content">Liability is strictly limited to those warranties of fitness for purpose and safety as provided by the manufacturer.</span>
                 Products and Logos in this website are trademarks or registered trademarks of their respective companies or mark holders.
             </div>
         </div>
