--- a/m.ironworker.htm
+++ b/m.ironworker.htm
@@ -20,7 +20,7 @@
 				<a href="http://www.americanmachinetools.com/default.htm"><img src="http://www.americanmachinetools.com/images/machine_tools_mobile.jpg" alt="Edwards hydraulic Ironworker machines in many sizes with many options.  CLICK FOR OUR HOMEPAGE."></a>
 			</div>
 			<div class="header-content">
-				<h1><b>Hydraulic Ironworker Machines can replace your drill press and band saw to speed up most jobs:</b></h1>
+				<h1>Hydraulic Ironworker Machines can replace your drill press and band saw to speed up most jobs:</h1>
 				<div class="header-content-cards">
                         <a href="https://www.bbb.org/online/consumer/cks.aspx?id=1090114163628" target="_blank"><img src="http://www.americanmachinetools.com/images/bbbsealh1US.gif" alt="American Machine Tools Company is accedited by the Better Business Bureau! Click to verify."></a>
                         <p></p>
@@ -31,7 +31,7 @@
 						For hydraulic powered punching of holes of many sizes and shapes, and for cutting, shearing, notching and bending metal flat bar and angle iron. Choose an Edwards Ironworker Machine to do it all. You can also connect an optional pipe bender, shop press, radius roller or horizontal press brake to your Ironworker Machine. Just order the optional hydraulic accessory connector.
 					</p>
 					<p class="text-justify">
-						We also offer custom punching, notching and forming dies. Takes 4 seconds to do what a drill press, saw, or torch does. Ironworkers are the most versatile machine. Scroll down to see all our machines and options below. In our separate <a href="http://www.americanmachinetools.com/hole_punch_turret.htm">Portable Hole Punch</a> webpage we have a 35 ton PortaPunch for on-site structural steel punching and a hand operated 12 station 5 ton turret punch for punching holes in thin metal.<br/>
+						<span class="span-content">We also offer custom punching, notching and forming dies. Takes 4 seconds to do what a drill press, saw, or torch does. Ironworkers are the most versatile machine. Scroll down to see all our machines and options below. In our separate <a href="http://www.americanmachinetools.com/hole_punch_turret.htm">Portable Hole Punch</a> webpage we have a 35 ton PortaPunch for on-site structural steel punching and a hand operated 12 station 5 ton turret punch for punching holes in thin metal.</span>
 						<a href="http://www.americanmachinetools.com/maquinas_trabajo_hierro.htm">MAQUINAS de TRABAJO de HIERRO en espanol</a> 
 					</p>
 					<p class="text-justify">
@@ -46,8 +46,9 @@
 
 		<div class="content">
 
-			<div class="content-list-data">
-				<h2><b>Edwards Hydraulic Ironworker Machines</b></h2>
+			<div class="content-main-lt">
+				
+				<h3>Edwards Hydraulic Ironworker Machines</h3>
 				<p class="text-justify">
 					Want an American made punching machine that is compact well designed, well built, and uncomplicated? These iron workers offer the biggest tonnage per dollar for your fabrication shop. Most of them work on the same principal with the center pulling straight down on the work. The tooling moves vertically, with no arc of a pivot arm. Most models come standard with a punching station, flat bar shear, angle iron shear, and often a coper-notcher. They operate so you can move from punch to plate shear to angle shear to notcher without always changing equipment. Many different sizes and styles of punch &amp; die sets are available such as round, oblong slot, square, rectangle, keyhole, etc. Many kinds of optional tooling is available (coper-notcher, press brake, pipe notcher, angle notcher, rod shear, gaging table, back gauge, multi-hole punching and even radius notching). Scoll down to see our many tool options. These Ironworker machines are shipped ready to operate with hydraulic oil, blades and punches. All you have to do is connect the electricity. Optional 220 volts, single phase electrics available for most machines at $245 extra except 120 ton and 100 Deluxe. 440/480 volts costs $100 extra. Optional Pipe &amp; Tube Bender attachment and optional Hydraulic Shop Press attachment available.
 				</p>
@@ -63,6 +64,7 @@
 				<p class="bold-text text-justify">
 					<a href="http://www.americanmachinetools.com/tonnage_punch_hole.htm">Click for a Chart for Tonnage needed to Punch a Hole</a>
 				</p>
+			
 			</div>
 
 			<div class="content-main">
@@ -72,8 +74,8 @@
 						<h3>Edwards 25 Ton<br/>"Jaws Junior"</h3>
 						<img src="http://www.americanmachinetools.com/images/edwards_ironworker_25.jpg" alt="25 Ton Jaws Junior">
 						<p class="bold-text text-center">
-							<span class="content-price">Price: $5899</span>
-							<br/>
+							<span class="span-content"><span class="content-price">Price: $5899</span>
+							</span>
 							Made in USA
 						</p>
 						<ul>
@@ -97,13 +99,13 @@
 						<h3>40 Ton "Jaws 4" Edwards Ironworker Machine </h3>
 						<img src="http://www.americanmachinetools.com/images/edwards_ironworker_40.jpg" alt="Edwards 40 ton Hydraulic Ironworker Machine with spare hydraulic powered cavity for optional tooling on right side">
 						<p class="bold-text text-center">
-							<span class="content-price">Price: $8299</span>
-							<br/>
+							<span class="span-content"><span class="content-price">Price: $8299</span>
+							</span>
 							Made in USA
 						</p>
 						<p class="bold-text">
-							THIS MACHINE IS NORMALLY IN STOCK at 3 phase and 1 phase.
-							<br/>
+							<span class="span-content">THIS MACHINE IS NORMALLY IN STOCK at 3 phase and 1 phase.
+							</span>
 							2 weeks to build this machine with other voltages.
 						</p>
 						<p class="text-justify">
@@ -148,13 +150,13 @@
 						<h3>50 Ton "Jaws 4" Edwards Ironworker Machine </h3>
 						<img src="http://www.americanmachinetools.com/images/edwards_ironworker_50.jpg" alt="Edwards 50 ton hydraulic Ironworker machine">
 						<p class="bold-text text-center">
-							<span class="content-price">Price: $9499</span>
-							<br/>
+							<span class="span-content"><span class="content-price">Price: $9499</span>
+							</span>
 							Made in USA
 						</p>
 						<p class="bold-text">
-							A lot lighter than the 55 ton machine.
-							<br/>
+							<span class="span-content">A lot lighter than the 55 ton machine.
+							</span>
 							2 weeks to build this machine. 
 						</p>
 						<p class="text-justify">
@@ -195,8 +197,8 @@
 							Has spare hydraulic powered cavity for optional tooling on the right side
 						</p>
 						<p class="bold-text">
-							<span class="content-price text-center">Price: $10299</span>
-							<br/>
+							<span class="span-content"><span class="content-price text-center">Price: $10299</span>
+							</span>
 							<span>Made in USA</span>
 						</p>
 						<p class="bold-text text-center">
@@ -283,8 +285,8 @@
 							<span class="text-center">Made in USA</span>
 						</p>
 						<p class="bold-text text-justify">
-							THIS MACHINE IS NORMALLY IN STOCK at 230 Volts 3 phase
-							<br/>
+							<span class="span-content">THIS MACHINE IS NORMALLY IN STOCK at 230 Volts 3 phase
+							</span>
 							Takes 3 Weeks to build this machine with other Voltages.
 						</p>
 						<ul>
@@ -351,8 +353,8 @@
 							<span class="text-center">Made in USA</span>
 						</p>
 						<p class="bold-text text-justify">
-							THIS MACHINE IS NORMALLY IN STOCK at 230 Volts 3 phase.
-							<br/>
+							<span class="span-content">THIS MACHINE IS NORMALLY IN STOCK at 230 Volts 3 phase.
+							</span>
 							3 weeks to build this machine with other voltages.
 						</p>
 						<ul>
@@ -515,7 +517,7 @@
 						</p>
 						<ul>
 							<li>Weight: 6000 pounds.</li>
-							<li>Electrics: 7.5 HP, 220 Volts, 3 phase.<br/>Optional 440V or 575V or 220V, 1 phase</li>
+							<li><span class="span-content">Electrics: 7.5 HP, 220 Volts, 3 phase.</span>Optional 440V or 575V or 220V, 1 phase</li>
 						</ul>
 						<p class="bold-text">Scroll down to see optional tooling below.</p>
 						<p class="bold-text text-justify">
@@ -690,15 +692,15 @@
 								<span>Made in USA</span>
 							</p>
 							<p class="text-justify">
-								Coper-Notcher, Angle-Notcher, Pipe Notcher, Press-Brake, Rod-Shear, Custom Channel-Shear, Spare Punching Assembly, Extra Large Punching Assembly, Quick Change Punch Coupling, Magnetic Bar Fence, Gaging Table, Pedestal Die Table, Picket making tooling and many sizes and styles of punch &amp; die sets.
-								<br/>
-								Click to see a list of <a href="http://www.americanmachinetools.com/punch_die_sets.htm">Punch and Die Set Sizes</a>
-								<br/>
+								<span class="span-content">Coper-Notcher, Angle-Notcher, Pipe Notcher, Press-Brake, Rod-Shear, Custom Channel-Shear, Spare Punching Assembly, Extra Large Punching Assembly, Quick Change Punch Coupling, Magnetic Bar Fence, Gaging Table, Pedestal Die Table, Picket making tooling and many sizes and styles of punch &amp; die sets.
+								</span>
+								<span class="span-content">Click to see a list of <a href="http://www.americanmachinetools.com/punch_die_sets.htm">Punch and Die Set Sizes</a>
+								</span>
 								The 55 ton, 65 ton, 100 ton and 120 ton machines have a powered spare tooling station to use almost any of the tooling shown or to use your own custom die set without having to unbolt the punching head. Only the 55 ton and 100 ton Jaws IV ironworkers have the option of holding 2 punching assemblies simultaneously (1 on each side). Custom tooling also available.
 							</p>
 							<p class="bold-text">
-								SCROLL DOWN TO SEE THE TOOLING PICTURES
-								<br/>
+								<span class="span-content">SCROLL DOWN TO SEE THE TOOLING PICTURES
+								</span>
 								<a href="https://www.youtube.com/user/AmericanMachineTools/videos">Click to see VIDEOS of the Edwards Tooling</a>
 							</p>
 						</div>
@@ -816,33 +818,33 @@
 				</p>
 			</div>
 			<div class="footer-mid">
-				<b class="footer-mid-amt">American Machine Tools Corp</b><br/>
-				5864 Northwest Hwy<br/>
-                Chicago IL 60631 USA<br/>
-                Phone: 773-334-5000<br/>
+				<span class="span-content"><b class="footer-mid-amt">American Machine Tools Corp</b></span>
+				<span class="span-content">5864 Northwest Hwy</span>
+                <span class="span-content">Chicago IL 60631 USA</span>
+                <span class="span-content">Phone: 773-334-5000</span>
                 Fax: 773-442-0314
                 <p class="text-center">
                 	<a href="http://www.americanmachinetools.com/RFQ.asp?model=Catalog+and+Ironworkers+Information+Request"><b>Click to email Us</b></a>
                 </p>
 			</div>
 			<div class="footer-mid">
-                <a href="http://www.americanmachinetools.com/privacy.htm"><b>Privacy Clause</b></a><br/>
+                <span class="span-content"><a href="http://www.americanmachinetools.com/privacy.htm"><b>Privacy Clause</b></a></span>
                 <a href="http://www.americanmachinetools.com/machinery_safety.htm"><b>SAFETY</b></a>
             </div>
             <div class="footer-mid">
-                <a href="http://www.americanmachinetools.com/terms.htm"><b>Terms &amp; Conditions</b></a><br/>
+                <span class="span-content"><a href="http://www.americanmachinetools.com/terms.htm"><b>Terms &amp; Conditions</b></a></span>
                 <a href="http://www.americanmachinetools.com/FAQ.htm" target="FAQ"><b>Frequently Asked Questions</b></a>
             </div>
             <div class="footer-mid">
-                Website by HumCommerce.com<br/>
-                Copyright &copy; 2001-2017<br/>
-                American Machine Tools Co.<br/>
+                <span class="span-content">Website by HumCommerce.com</span>
+                <span class="span-content">Copyright &copy; 2001-2017</span>
+                <span class="span-content">American Machine Tools Co.</span>
                 All Rights Reserved
             </div>
             <div class="footer-end">
-                Information and prices on this website is subject to change without notice.<br/>
-                Offers from American Machine Tools Corporation include include Terms and Conditions shown on our website.<br/>
-                Liability is strictly limited to those warranties of fitness for purpose and safety as provided by the manufacturer.<br/>
+                <span class="span-content">Information and prices on this website is subject to change without notice.</span>
+                <span class="span-content">Offers from American Machine Tools Corporation include include Terms and Conditions shown on our website.</span>
+                <span class="span-content">Liability is strictly limited to those warranties of fitness for purpose and safety as provided by the manufacturer.</span>
                 Products and Logos in this website are trademarks or registered trademarks of their respective companies or mark holders.
             </div>
 		</div>
