--- a/m.band_saw.htm
+++ b/m.band_saw.htm
@@ -74,7 +74,7 @@
 							Also works vertical by raising head up and installing table plate. 110 volts.
 						</p>
 						<ul>
-							<li>Cutting Capacity:<br/>@90&deg;: 7" Round, 12 x 7" Flat Bar<br/>@45&deg;: 4" Round, 5.5 x 3.75" Flat Bar</li>
+							<li><span class="span-content">Cutting Capacity:</span><span class="span-content">@90&deg;: 7" Round, 12 x 7" Flat Bar</span>@45&deg;: 4" Round, 5.5 x 3.75" Flat Bar</li>
 							<li>Blade speeds: 85, 130, 180, 235 fpm.</li>
 							<li>Blade width: 3/4"</li>
 							<li>Motor: 3/4 HP @ 110 volts, 1 phase</li>
@@ -91,7 +91,7 @@
 						<p class="bold-text text-center"><a href="http://www.americanmachinetools.com/RFQ.asp?model=Dake+SE912+Horizontal+Band+Saw&form=2">Click to request the info packet</a></p>
 						<p class="content-price">$2595</p>
 						<ul>
-							<li>Cutting Capacity:<br/>@90&deg;: 9" Round, 12 x 9" Flat Bar<br/>@45&deg;: 3.5" Round, 7.5 x 3.5" Flat Bar</li>
+							<li><span class="span-content">Cutting Capacity:</span><span class="span-content">@90&deg;: 9" Round, 12 x 9" Flat Bar</span>@45&deg;: 3.5" Round, 7.5 x 3.5" Flat Bar</li>
 							<li>Blade speeds: 98, 164, 246, 328 fpm</li>
 							<li>Blade width: 1"</li>
 							<li>Motor: 1 HP @ 220 volts, 1 phase</li>
@@ -110,7 +110,7 @@
 						<img src="http://www.americanmachinetools.com/images/dake_J10_horizontal.jpg" alt="Image of Dake JH10W - Still made in USA">
 						<p class="bold-text text-center"><a href="http://www.americanmachinetools.com/RFQ.asp?model=Dake-Johnson+JH10-Wet+Horizontal+Band+Saw&form=2">Click to Request this Quote</a></p>
 						<ul>
-							<li>Cutting Capacity:<br/>@90&deg;: 10" Round, 18" wide Flat Bar<br/>@45&deg;: 5" Round, 11 x 5" Flat Bar</li>
+							<li><span class="span-content">Cutting Capacity:</span><span class="span-content">@90&deg;: 10" Round, 18" wide Flat Bar</span>@45&deg;: 5" Round, 11 x 5" Flat Bar</li>
 							<li>Blade speeds: 50, 90, 160, 270 fpm.</li>
 							<li>Blade width: 1"</li>
 							<li>Motor: 1 HP</li>
@@ -133,7 +133,7 @@
 						<p class="bold-text text-center"><a href="http://www.americanmachinetools.com/RFQ.asp?model=Baileigh+250M+Horizontal+BandSaw&form=2">Click to Request this Quote</a></p>
 						<p class="bold-text">Available in 110 volts, 1 phase (BS-250) or 220 volts, 1 phase (BS-260).</p>
 						<ul>
-							<li>Cutting Capacity:<br/>@90&deg;: 8.75" Round, 10 x 4" Flat Bar<br/>@45&deg;: 6.5" Round, 5.5" Square</li>
+							<li><span class="span-content">Cutting Capacity:</span><span class="span-content">@90&deg;: 8.75" Round, 10 x 4" Flat Bar</span>@45&deg;: 6.5" Round, 5.5" Square</li>
 							<li>Blade speeds: 66 to 280 fpm variable</li>
 							<li>Blade width: 1"</li>
 							<li>Motor: 2 HP</li>
@@ -153,7 +153,7 @@
 						<p class="bold-text text-center"><a href="http://www.americanmachinetools.com/RFQ.asp?model=Dake+TRAD300+Horizontal+Band+Saw&form=2">Click to Request this Quote</a></p>
 						<p class="bold-text">220 volts, 3 phase</p>
 						<ul>
-							<li>Cutting Capacity:<br/>@90&deg;: 10" Round, 11.75 x 7" flat bar<br/>@45&deg;: 7.5" Round, 7.5 x 6.5" flat bar</li>
+							<li><span class="span-content">Cutting Capacity:</span><span class="span-content">@90&deg;: 10" Round, 11.75 x 7" flat bar</span>@45&deg;: 7.5" Round, 7.5 x 6.5" flat bar</li>
 							<li>Blade speeds: 108 or 216 fpm</li>
 							<li>Blade width: 1"</li>
 							<li>Motor: 1.3 or 2 HP</li>
@@ -175,7 +175,7 @@
 						<img src="http://www.americanmachinetools.com/images/Automatic_bandsaw.jpg" alt="Dake Heavy Duty Mitering band saws">
 						<p class="bold-text text-center"><a href="http://www.americanmachinetools.com/RFQ.asp?model=Dake-Johnson+LE10A+Automatic+Horizontal+BandSaw&form=2">Click to Request the LE10A Quote</a></p>
 						<ul>
-							<li>Cutting Capacity:<br/>@90&deg;: 10" Round 7" x 12" Flat Bar</li>
+							<li><span class="span-content">Cutting Capacity:</span>@90&deg;: 10" Round 7" x 12" Flat Bar</li>
 							<li>Blade Width: 1"</li>
 							<li>Motor: 3 HP</li>
 							<li>Automatic multi-indexing feed system</li>
@@ -338,9 +338,9 @@
 									<tbody>
 										<tr>
 											<td class="mob-tab-cell"><b>Machine</b></td>
-											<td class="mob-tab-cell-nowrap"><b>KV50</b><br/><a href="http://www.americanmachinetools.com/RFQ.asp?model=KV50+Vertical+Band-Saw&form=2"><b>Request Quote</b></a></td>
-											<td class="mob-tab-cell-nowrap"><b>KV60</b><br/><a href="http://www.americanmachinetools.com/RFQ.asp?model=KV60+Vertical+BandSaw&form=2"><b>Request Quote</b></a></td>
-											<td class="mob-tab-cell-nowrap"><b>KV100</b><br/><a href="http://www.americanmachinetools.com/RFQ.asp?model=KV100+Vertical+Band-Saw&form=2"><b>Request Quote</b></a></td>
+											<td class="mob-tab-cell-nowrap"><span class="span-content"><b>KV50</b></span><a href="http://www.americanmachinetools.com/RFQ.asp?model=KV50+Vertical+Band-Saw&form=2"><b>Request Quote</b></a></td>
+											<td class="mob-tab-cell-nowrap"><span class="span-content"><b>KV60</b></span><a href="http://www.americanmachinetools.com/RFQ.asp?model=KV60+Vertical+BandSaw&form=2"><b>Request Quote</b></a></td>
+											<td class="mob-tab-cell-nowrap"><span class="span-content"><b>KV100</b></span><a href="http://www.americanmachinetools.com/RFQ.asp?model=KV100+Vertical+Band-Saw&form=2"><b>Request Quote</b></a></td>
 										</tr>
 										<tr>
 											<td class="mob-tab-cell">Throat</td>
@@ -357,8 +357,8 @@
 										<tr>
 											<td class="mob-tab-cell">Table</td>
 											<td class="mob-tab-cell">23 x 19"</td>
-											<td class="mob-tab-cell">23 x 19"<br/>8 x 19</td>
-											<td class="mob-tab-cell">23 x 19"<br/>18 x 19</td>
+											<td class="mob-tab-cell"><span class="span-content">23 x 19"</span>8 x 19</td>
+											<td class="mob-tab-cell"><span class="span-content">23 x 19"</span>18 x 19</td>
 										</tr>
 										<tr>
 											<td class="mob-tab-cell">4-way Incline</td>
@@ -419,8 +419,8 @@
 									<tbody>
 										<tr>
 											<td class="mob-tab-cell"><b>Machine</b></td>
-											<td class="mob-tab-cell-nowrap"><b>KV50A</b><br/><a href="http://www.americanmachinetools.com/RFQ.asp?model=KV50A+Vertical+Band-Saw&form=2"><b>Request Quote</b></a></td>
-											<td class="mob-tab-cell-nowrap"><b>KV100A</b><br/><a href="http://www.americanmachinetools.com/RFQ.asp?model=KV100A+Vertical+BandSaw&form=2"><b>Request Quote</b></a></td>
+											<td class="mob-tab-cell-nowrap"><span class="span-content"><b>KV50A</b></span><a href="http://www.americanmachinetools.com/RFQ.asp?model=KV50A+Vertical+Band-Saw&form=2"><b>Request Quote</b></a></td>
+											<td class="mob-tab-cell-nowrap"><span class="span-content"><b>KV100A</b></span><a href="http://www.americanmachinetools.com/RFQ.asp?model=KV100A+Vertical+BandSaw&form=2"><b>Request Quote</b></a></td>
 										</tr>
 										<tr>
 											<td class="mob-tab-cell">Throat</td>
@@ -435,7 +435,7 @@
 										<tr>
 											<td class="mob-tab-cell">Table</td>
 											<td class="mob-tab-cell">26 x 27"</td>
-											<td class="mob-tab-cell">26 x 27"<br/>18 x 19</td>
+											<td class="mob-tab-cell"><span class="span-content">26 x 27"</span>18 x 19</td>
 										</tr>
 										<tr>
 											<td class="mob-tab-cell">4-way Incline</td>
@@ -476,31 +476,31 @@
 								 <table>
 								 	<tbody>
 								 		<tr>
-								 			<td class="mob-tab-cell"><b>Click below to <br>Request a Price Quote</b></td>
-								 			<td class="mob-tab-cell"><b>Blade Speed<br/>fpm</b></td>
-								 			<td class="mob-tab-cell"><b>Motor<br/>HP</b></td>
+								 			<td class="mob-tab-cell"><b><span class="span-content">Click below to </span>Request a Price Quote</b></td>
+								 			<td class="mob-tab-cell"><b><span class="span-content">Blade Speed</span>fpm</b></td>
+								 			<td class="mob-tab-cell"><b><span class="span-content">Motor</span>HP</b></td>
 								 			<td class="mob-tab-cell"><b>Throat Depth</b></td>
 								 			<td class="mob-tab-cell"><b>Max Work Height</b></td>
 								 			<td class="mob-tab-cell"><b>Table Size</b></td>
 								 			<td class="mob-tab-cell"><b>Max Table Tilts</b></td>
 								 		</tr>
 								 		<tr>
-								 			<td class="mob-tab-cell-nowrap"><b>Dake Model 14-10</b><br/>Made in USA<br/><a href="http://www.americanmachinetools.com/RFQ.asp?model=Dake+14-10+Vertical+Band+Saw&form=2">Request Quote</a></td>
-								 			<td class="mob-tab-cell">70<br/>140<br/>270<br/>540</td>
+								 			<td class="mob-tab-cell-nowrap"><span class="span-content"><b>Dake Model 14-10</b></span><span class="span-content">Made in USA</span><a href="http://www.americanmachinetools.com/RFQ.asp?model=Dake+14-10+Vertical+Band+Saw&form=2">Request Quote</a></td>
+								 			<td class="mob-tab-cell"><span class="span-content">70</span><span class="span-content">140</span><span class="span-content">270</span>540</td>
 								 			<td class="mob-tab-cell">1</td>
 								 			<td class="mob-tab-cell">14"</td>
 								 			<td class="mob-tab-cell">10"</td>
 								 			<td class="mob-tab-cell-nowrap">15" x 16"</td>
-								 			<td class="mob-tab-cell-nowrap">5&deg; Left<br/>45&deg;Right</td>
+								 			<td class="mob-tab-cell-nowrap"><span class="span-content">5&deg; Left</span>45&deg;Right</td>
 								 		</tr>
 								 		<tr>
-								 			<td class="mob-tab-cell-nowrap"><b>Dake Trademaster</b><br/>Adjustable blade feed pressure<br/>Work light.<br/>Extra Heavy Duty.<br/>Made in USA<br/><a href="http://www.americanmachinetools.com/RFQ.asp?model=Dake+Trademaster+Vertical+Band+Saw&form=2">Request Quote</a></td>
-								 			<td class="mob-tab-cell-nowrap">Variable<br/>50 to 500</td>
+								 			<td class="mob-tab-cell-nowrap"><span class="span-content"><b>Dake Trademaster</b></span><span class="span-content">Adjustable blade feed pressure</span><span class="span-content">Work light.</span><span class="span-content">Extra Heavy Duty.</span><span class="span-content">Made in USA</span><a href="http://www.americanmachinetools.com/RFQ.asp?model=Dake+Trademaster+Vertical+Band+Saw&form=2">Request Quote</a></td>
+								 			<td class="mob-tab-cell-nowrap"><span class="span-content">Variable</span>50 to 500</td>
 								 			<td class="mob-tab-cell">1.5</td>
 								 			<td class="mob-tab-cell">19.5"</td>
 								 			<td class="mob-tab-cell">12"</td>
 								 			<td class="mob-tab-cell-nowrap">24" x 24"</td>
-								 			<td class="mob-tab-cell">10&deg; Left<br/>45&deg; Right</td>
+								 			<td class="mob-tab-cell"><span class="span-content">10&deg; Left</span>45&deg; Right</td>
 								 		</tr>
 								 	</tbody>
 								 </table>
@@ -541,9 +541,10 @@
 								<table>
 									<tbody>
 										<tr>
-											<td class="mob-tab-cell"></td>
-											<td class="mob-tab-cell"><b>Blade Speed<br/>(fpm)</b></td>
-											<td class="mob-tab-cell"><b>Motor<br/>(HP)</b></td>
+											<td class="mob-tab-cell"><b><span class="span-content">Click below to</span> 
+Request a Price Quote</b></td>
+											<td class="mob-tab-cell"><b><span class="span-content">Blade Speed</span>(fpm)</b></td>
+											<td class="mob-tab-cell"><b><span class="span-content">Motor</span>(HP)</b></td>
 											<td class="mob-tab-cell"><b>Throat Depth</b></td>
 											<td class="mob-tab-cell"><b>Max Work Height</b></td>
 											<td class="mob-tab-cell"><b>Table Size</b></td>
@@ -551,7 +552,7 @@
 											<td class="mob-tab-cell"><b>Max Blade Width</b></td>
 										</tr>
 										<tr>
-											<td class="mob-tab-cell-nowrap"><b>Dake-Johnson F-16<br/><a href="http://www.americanmachinetools.com/RFQ.asp?model=Dake-Johnson+F-16+Vertical+BandSaw&form=2">Request Quote</a></b></td>
+											<td class="mob-tab-cell-nowrap"><b><span class="span-content">Dake-Johnson F-16</span><a href="http://www.americanmachinetools.com/RFQ.asp?model=Dake-Johnson+F-16+Vertical+BandSaw&form=2">Request Quote</a></b></td>
 											<td class="mob-tab-cell">50 - 590</td>
 											<td class="mob-tab-cell">1.5</td>
 											<td class="mob-tab-cell">16"</td>
@@ -561,7 +562,7 @@
 											<td class="mob-tab-cell">5/8"</td>
 										</tr>
 										<tr>
-											<td class="mob-tab-cell"><b>Dake-Johnson V-24<br/><a href="http://www.americanmachinetools.com/RFQ.asp?model=Dake-Johnson+V-24+Vertical+Band+Saw&form=2">Request Quote</a></b></td>
+											<td class="mob-tab-cell"><b><span class="span-content">Dake-Johnson V-24</span><a href="http://www.americanmachinetools.com/RFQ.asp?model=Dake-Johnson+V-24+Vertical+Band+Saw&form=2">Request Quote</a></b></td>
 											<td class="mob-tab-cell-nowrap">50 - 4250</td>
 											<td class="mob-tab-cell">2.2</td>
 											<td class="mob-tab-cell">23"</td>
@@ -571,7 +572,7 @@
 											<td class="mob-tab-cell">1"</td>
 										</tr>
 										<tr>
-											<td class="mob-tab-cell-nowrap"><b>Dake-Johnson VH-24<br/><a href="http://www.americanmachinetools.com/RFQ.asp?model=Dake-Johnson+VH-24+Vertical+Band+Saw&form=2">Request Quote</a></b></td>
+											<td class="mob-tab-cell-nowrap"><b><span class="span-content">Dake-Johnson VH-24</span><a href="http://www.americanmachinetools.com/RFQ.asp?model=Dake-Johnson+VH-24+Vertical+Band+Saw&form=2">Request Quote</a></b></td>
 											<td class="mob-tab-cell">50 - 4250</td>
 											<td class="mob-tab-cell">2.2</td>
 											<td class="mob-tab-cell">23"</td>
@@ -581,7 +582,7 @@
 											<td class="mob-tab-cell">1"</td>
 										</tr>
 										<tr>
-											<td class="mob-tab-cell"><b>Dake-Johnson V-40<br/><a href="http://www.americanmachinetools.com/RFQ.asp?model=Dake-Johnson+V-40+Vertical+Band+Saw&form=2">Request Quote</a></b></td>
+											<td class="mob-tab-cell"><b><span class="span-content">Dake-Johnson V-40</span><a href="http://www.americanmachinetools.com/RFQ.asp?model=Dake-Johnson+V-40+Vertical+Band+Saw&form=2">Request Quote</a></b></td>
 											<td class="mob-tab-cell">50 - 4250</td>
 											<td class="mob-tab-cell">2.2</td>
 											<td class="mob-tab-cell">41"</td>
@@ -591,7 +592,7 @@
 											<td class="mob-tab-cell">3/4"</td>
 										</tr>
 										<tr>
-											<td class="mob-tab-cell-nowrap"><b>Dake-Johnson VH-40<br/><a href="http://www.americanmachinetools.com/RFQ.asp?model=Dake-Johnson+VH-40+Vertical+BandSaw&form=2">Request Quote</a></b></td>
+											<td class="mob-tab-cell-nowrap"><b><span class="span-content">Dake-Johnson VH-40</span><a href="http://www.americanmachinetools.com/RFQ.asp?model=Dake-Johnson+VH-40+Vertical+BandSaw&form=2">Request Quote</a></b></td>
 											<td class="mob-tab-cell">50 - 4250</td>
 											<td class="mob-tab-cell">2.2</td>
 											<td class="mob-tab-cell">41"</td>
@@ -656,36 +657,35 @@
                 </p>
             </div>
             <div class="footer-mid">
-                <b class="footer-mid-amt">American Machine Tools Corp</b><br/>
-                5864 Northwest Hwy<br/>
-                Chicago IL 60631 USA<br/>
-                Phone: 773-334-5000<br/>
-                Fax: 773-442-0314
+                <span class="span-content"><b class="footer-mid-amt">American Machine Tools Corp</b></span>
+                <span class="span-content">5864 Northwest Hwy</span>
+                <span class="span-content">Chicago IL 60631 USA</span>
+                <span class="span-content">Phone: 773-334-5000</span>
+                <span class="span-content">Fax: 773-442-0314</span>
                 <p>
                     <a href="http://www.americanmachinetools.com/RFQ.asp?model=Catalog+and+Saws+Information+Request"><b>Click to email Us</b></a>
-               <br>
-                    <a class="bold-text" href="http://www.americanmachinetools.com/machinery_safety.htm">Click for our Machinery Safety webpage</a>
+               
                 </p>
             </div>
             <div class="footer-mid">
-                <a href="http://www.americanmachinetools.com/privacy.htm"><b>Privacy Clause</b></a><br/>
+                <span class="span-content"><a href="http://www.americanmachinetools.com/privacy.htm"><b>Privacy Clause</b></a></span>
                 <a href="http://www.americanmachinetools.com/machinery_safety.htm"><b>SAFETY</b></a>
             </div>
             <div class="footer-mid">
-                <a href="http://www.americanmachinetools.com/terms.htm"><b>Terms &amp; Conditions</b></a><br/>
+                <span class="span-content"><a href="http://www.americanmachinetools.com/terms.htm"><b>Terms &amp; Conditions</b></a></span>
                 <a href="http://www.americanmachinetools.com/FAQ.htm" target="FAQ"><b>Frequently Asked Questions</b></a>
             </div>
             <div class="footer-mid">
-                Website by HumCommerce.com<br/>
-                Copyright &copy; 2001-2017<br/>
-                American Machine Tools Co.<br/>
-                All Rights Reserved
+                <span class="span-content">Website by HumCommerce.com</span>
+                <span class="span-content">Copyright &copy; 2001-2017</span>
+                <span class="span-content">American Machine Tools Co.</span>
+                <span class="span-content">All Rights Reserved</span>
             </div>
             <div class="footer-end">
-                Information and prices on this website is subject to change without notice.<br/>
-                Offers from American Machine Tools Corporation include Terms and Conditions shown on our website.<br/>
-                Liability is strictly limited to those warranties of fitness for purpose and safety as provided by the manufacturer.<br/>
-                Products and Logos in this website are trademarks or registered trademarks of their respective companies or mark holders.
+                <span class="span-content">Information and prices on this website is subject to change without notice.</span>
+                <span class="span-content">Offers from American Machine Tools Corporation include Terms and Conditions shown on our website.</span>
+                <span class="span-content">Liability is strictly limited to those warranties of fitness for purpose and safety as provided by the manufacturer.</span>
+                <span class="span-content">Products and Logos in this website are trademarks or registered trademarks of their respective companies or mark holders.</span>
             </div>
 		</div>
 	</div>
