--- a/m.cold_saws.htm
+++ b/m.cold_saws.htm
@@ -42,10 +42,10 @@
                             <a href="http://www.americanmachinetools.com/RFQ.asp?model=Jet+JF225+Portable+Cold+Saw&form=2">Click to Request this Quote and info</a>
                         </p>
                         <ul>
-                            <li>Cutting Capacity:
-                                <br/>Round at 90&deg;: 2-1/2", Round at 45&deg;: 2"
-                                <br/>Rectangle at 90&deg;: 2-1/2 x 2-15/16"
-                                <br/>Square at 90&deg;: 2-1/4 x 2-1/4"</li>
+                            <li><span class="span-content">Cutting Capacity:</span>
+                                <span class="span-content">Round at 90&deg;: 2-1/2", Round at 45&deg;: 2"
+                                </span><span class="span-content">Rectangle at 90&deg;: 2-1/2 x 2-15/16"
+                                </span>Square at 90&deg;: 2-1/4 x 2-1/4"</li>
                             <li>Blade Size: 225mm x 32mm x 2mm</li>
                             <li>Blade Speed: 52 RPM</li>
                             <li>Maximum Vise Opening: 2-3/4"</li>
@@ -68,13 +68,13 @@
                             <a href="http://www.americanmachinetools.com/RFQ.asp?model=Jet+CS-275+ColdSaw&form=2">Click to Request this Quote and info</a>
                         </p>
                         <ul>
-                            <li>Cutting Capacity:
-                                <br/>Round at 90&deg;: 3.3" (tube), 1.5" (solid)
-                                <br/>Round at 45&deg;: 3.3" (tube), 2.5" (solid)
-                                <br/>Rectangle at 90&deg;: 3.1 x 2.0 (tube), 3.1 x 2.0 (solid)
-                                <br/>Rectangle at 45&deg;: 2.2 x 2.0 (tube), 2.2 x 2.0 (solid)
-                                <br/>Square at 90&deg;: 2.5 x 2.5 (tube), 2.5 x 2.5 (solid)
-                                <br/>Square at 45&deg;: 2.2 x 2.2 (tube), 2.2 x 2.2 (solid)</li>
+                            <li><span class="span-content">Cutting Capacity:
+                                </span><span class="span-content">Round at 90&deg;: 3.3" (tube), 1.5" (solid)
+                                </span><span class="span-content">Round at 45&deg;: 3.3" (tube), 2.5" (solid)
+                                </span><span class="span-content">Rectangle at 90&deg;: 3.1 x 2.0 (tube), 3.1 x 2.0 (solid)
+                                </span><span class="span-content">Rectangle at 45&deg;: 2.2 x 2.0 (tube), 2.2 x 2.0 (solid)
+                                </span><span class="span-content">Square at 90&deg;: 2.5 x 2.5 (tube), 2.5 x 2.5 (solid)
+                                </span>Square at 45&deg;: 2.2 x 2.2 (tube), 2.2 x 2.2 (solid)</li>
                             <li>Blade Size: 275mm x 32mm x 2mm </li>
                             <li>Blade Speeds: 54 , 108 RPM (ferrous cutting)</li>
                             <li>Maximum Vise Opening: 4"</li>
@@ -94,13 +94,13 @@
                             <a href="http://www.americanmachinetools.com/RFQ.asp?model=Jet+CS-315+ColdSaw&form=2">Click to Request this Quote and info</a>
                         </p>
                         <ul>
-                            <li>Cutting Capacity: 
-                            <br/>Round at 90&deg;: 3.5" (tube), 2" (solid)
-                            <br/>Round at 45&deg;: 3.5" (tube), 2" (solid)
-                            <br/>Rectangle at 90&deg;: 3.2 x 3.2 (tube), 4 x 3.2 (solid)
-                            <br/>Rectangle at 45&deg;: 2.6 x 2.6 (tube), 3.2 x 2.6 (solid)
-                            <br/>Square at 90&deg;: 3.25 x 3.25 (tube), 3.2 x 3.2 (solid)
-                            <br/>Square at 45&deg;: 3.125 x 3.125 (tube), 2.6 x 2.6 (solid)</li>
+                            <li><span class="span-content">Cutting Capacity: 
+                            </span><span class="span-content">Round at 90&deg;: 3.5" (tube), 2" (solid)
+                            </span><span class="span-content">Round at 45&deg;: 3.5" (tube), 2" (solid)
+                            </span><span class="span-content">Rectangle at 90&deg;: 3.2 x 3.2 (tube), 4 x 3.2 (solid)
+                            </span><span class="span-content">Rectangle at 45&deg;: 2.6 x 2.6 (tube), 3.2 x 2.6 (solid)
+                            </span><span class="span-content">Square at 90&deg;: 3.25 x 3.25 (tube), 3.2 x 3.2 (solid)
+                            </span>Square at 45&deg;: 3.125 x 3.125 (tube), 2.6 x 2.6 (solid)</li>
                             <li>Blade Size: 315mm x 32mm x 2mm</li>
                             <li>Blade Speeds: 52 , 104 RPM (ferrous cutting)</li>
                             <li>Maximum Vise Opening: 4.7"</li>
@@ -121,12 +121,12 @@
                             <a href="http://www.americanmachinetools.com/RFQ.asp?model=Jet+JFK350-2K+Cold+Saw&form=2">Click to Request this Quote and info</a>
                         </p>
                         <ul>
-                            <li>Cutting Capacity: 
-                            <br/>Round at 90&deg;: 4-1/2. Round at 45&deg;: 3-1/2"
-                            <br/>Rectangle at 90&deg;: 5-1/2 x 3-3/4".
-                            <br/>Rectangle at 45&deg;: 3-1/2 x 3-1/2"
-                            <br/>Square at 90&deg;: 4-1/4 x 4-1/4".
-                            <br/>Square at 45&deg;: 3-1/2 x 3-1/2" </li>
+                            <li><span class="span-content">Cutting Capacity: 
+                            </span><span class="span-content">Round at 90&deg;: 4-1/2. Round at 45&deg;: 3-1/2"
+                            </span><span class="span-content">Rectangle at 90&deg;: 5-1/2 x 3-3/4".
+                            </span><span class="span-content">Rectangle at 45&deg;: 3-1/2 x 3-1/2"
+                            </span><span class="span-content">Square at 90&deg;: 4-1/4 x 4-1/4".
+                            </span>Square at 45&deg;: 3-1/2 x 3-1/2" </li>
                             <li>Blade Size: 350mm x 32 x 2.5 </li>
                             <li>Blade Speeds (ferrous): 44, 88 RPM</li>
                             <li>Blade Speeds (non-ferrous): 1750, 3500 RPM </li>
@@ -149,15 +149,15 @@
                         <h4 class="bold-text">Dake Model Cut 250</h4>
                         <p class="bold-text"><a href="http://www.americanmachinetools.com/RFQ.asp?model=Dake+Cut+250+Cold+Saw&form=2">Click to Request this Quote</a></p>
                         <ul>
-                            <li>Cutting Capacity:
-                            <br/>@90&deg;: 1 1/4 round solid,
-                            <br/>2 3/4 round tube,
-                            <br/>2 1/2 sq.tube,
-                            <br/>3 7/8 x 1 3/4 rectangle tube.
-                            <br/>@45&deg;: 1" round solid,
-                            <br/>2 3/8 round tube,
-                            <br/>2 1/8 sq.tube,
-                            <br/>2 1/2 x 1 7/8 rectangle tube.</li>
+                            <li><span class="span-content">Cutting Capacity:
+                            </span><span class="span-content">@90&deg;: 1 1/4 round solid,
+                            </span><span class="span-content">2 3/4 round tube,
+                            </span><span class="span-content">2 1/2 sq.tube,
+                            </span><span class="span-content">3 7/8 x 1 3/4 rectangle tube.
+                            </span><span class="span-content">@45&deg;: 1" round solid,
+                            </span><span class="span-content">2 3/8 round tube,
+                            </span><span class="span-content">2 1/8 sq.tube,
+                            </span>2 1/2 x 1 7/8 rectangle tube.</li>
                             <li>10" max blade diameter</li>
                             <li>44 rpm. 1.2 HP motor.</li>
                             <li>Coolant included.</li>
@@ -165,15 +165,15 @@
                         <h4 class="bold-text">Dake Model 315CE</h4>
                         <p class="bold-text"><a href="http://www.americanmachinetools.com/RFQ.asp?model=Dake+SuperCut+315CE+Cutoff+Saw&form=2">Click to Request this Quote</a></p>
                         <ul>
-                            <li>Cutting Capacity:
-                            <br/>@90&deg;: 2 5/8 round solid,
-                            <br/>3 5/8 round tube,
-                            <br/>3 1/4 sq.tube,
-                            <br/>4 1/4 x 2 3/4 rectangle tube.
-                            <br/>@45&deg;: 2 1/2" round solid,
-                            <br/>3 1/2 round tube,
-                            <br/>3 1/8 sq.tube,
-                            <br/>3 1/4 x 2 3/4 rectangle tube.</li>
+                            <li><span class="span-content">Cutting Capacity:
+                            </span><span class="span-content">@90&deg;: 2 5/8 round solid,
+                            </span><span class="span-content">3 5/8 round tube,
+                            </span><span class="span-content">3 1/4 sq.tube,
+                            </span><span class="span-content">4 1/4 x 2 3/4 rectangle tube.
+                            </span><span class="span-content">@45&deg;: 2 1/2" round solid,
+                            </span><span class="span-content">3 1/2 round tube,
+                            </span><span class="span-content">3 1/8 sq.tube,
+                            </span>3 1/4 x 2 3/4 rectangle tube.</li>
                             <li>12.5" max blade diameter</li>
                             <li>22/44 rpm. 2.5 HP motor.</li>
                             <li>Coolant included.</li>
@@ -181,15 +181,15 @@
                         <h4 class="bold-text">Dake Model 350CE</h4>
                         <p class="bold-text"><a href="http://www.americanmachinetools.com/RFQ.asp?model=Dake+Super-Cut+350CE+Cold+Saw&form=2">Click to Request this Quote</a></p>
                         <ul>
-                            <li>Cutting Capacity:
-                            <br/>@90&deg;:  3 3/8 round solid,
-                            <br/>4 3/4 round tube,
-                            <br/>4 1/8 sq.tube,
-                            <br/>6 1/4 x 3 1/2 rectangle tube.
-                            <br/>@45&deg;: 3" round solid,
-                            <br/>4" round tube,
-                            <br/>3 3/8 sq.tube,
-                            <br/>3 3/8 x 2 3/4 rectangle tube.</li>
+                            <li><span class="span-content">Cutting Capacity:
+                            </span><span class="span-content">@90&deg;:  3 3/8 round solid,
+                            </span><span class="span-content">4 3/4 round tube,
+                            </span><span class="span-content">4 1/8 sq.tube,
+                            </span><span class="span-content">6 1/4 x 3 1/2 rectangle tube.
+                            </span><span class="span-content">@45&deg;: 3" round solid,
+                            </span><span class="span-content">4" round tube,
+                            </span><span class="span-content">3 3/8 sq.tube,
+                            </span>3 3/8 x 2 3/4 rectangle tube.</li>
                             <li>14" max blade diameter</li>
                             <li>22/44/88 rpm.</li>
                             <li>Coolant included.</li>
@@ -206,15 +206,15 @@
                         <h3>Dake Technics Cold Saw</h3>
                         <img src="http://www.americanmachinetools.com/images/Dake-SemiAuto_cold_saws.jpg" alt="Dake Technics Circular Coldsaw machine">
                         <ul>
-                            <li>Cutting Capacity:
-                            <br/>@90&deg;: 3 3/8 round solid,
-                            <br/>4 3/4 round tube,
-                            <br/>4 1/8 sq.tube
-                            <br/>6 1/4 x 3 1/2 rectangle tube
-                            <br/>@45&deg;: 3 " round solid,
-                            <br/>4" round tube,
-                            <br/>3 3/8 sq.tube
-                            <br/>3 3/8 x 2 3/4 rectangle tube</li>
+                            <li><span class="span-content">Cutting Capacity:
+                            </span><span class="span-content">@90&deg;: 3 3/8 round solid,
+                            </span><span class="span-content">4 3/4 round tube,
+                            </span><span class="span-content">4 1/8 sq.tube
+                            </span><span class="span-content">6 1/4 x 3 1/2 rectangle tube
+                            </span><span class="span-content">@45&deg;: 3 " round solid,
+                            </span><span class="span-content">4" round tube,
+                            </span><span class="span-content">3 3/8 sq.tube
+                            </span>3 3/8 x 2 3/4 rectangle tube</li>
                             <li>Foot Switch</li>
                             <li>Rotates 45&deg; right, 60&deg; left</li>
                             <li>Adjustable Pneumatic Vise</li>
@@ -250,15 +250,15 @@
                         <h3>Dake Euromatic Semi And Fully Automatic Cold Saws</h3>
                         <img src="http://www.americanmachinetools.com/images/Automatic_Cold_Saw.jpg" alt="DAKE Euromatic fully automatic cold saw">
                         <ul>
-                            <li>Capacities:
-                            <br/>@90&deg;: 4" round solid,
-                            <br/>5" round tube,
-                            <br/>4" sq.tube,
-                            <br/>7 x 4 rectangle tube.
-                            <br/>@45&deg;: 3 5/8" round solid,
-                            <br/>5" round tube,
-                            <br/>3 7/8 sq.tube,
-                            <br/>6 x 4 rect tube.</li>
+                            <li><span class="span-content">Capacities:
+                            </span><span class="span-content">@90&deg;: 4" round solid,
+                            </span><span class="span-content">5" round tube,
+                            </span><span class="span-content">4" sq.tube,
+                            </span><span class="span-content">7 x 4 rectangle tube.
+                            </span><span class="span-content">@45&deg;: 3 5/8" round solid,
+                            </span><span class="span-content">5" round tube,
+                            </span><span class="span-content">3 7/8 sq.tube,
+                            </span>6 x 4 rect tube.</li>
                             <li>Head rotates up to 45&deg; right for miter cutting.</li>
                             <li>Head rotates up to 90&deg; left for slot cutting</li>
                             <li>Table has removeable surface wear plates.</li>
@@ -299,33 +299,33 @@
 				  
             </div>
             <div class="footer-mid">
-                <b class="footer-mid-amt">American Machine Tools Corp</b><br/>
-                5864 Northwest Hwy<br/>
-                Chicago IL 60631 USA<br/>
-                Phone: 773-334-5000<br/>
-                Fax: 773-442-0314
+                <span class="span-content"><b class="footer-mid-amt">American Machine Tools Corp</b></span>
+                <span class="span-content">5864 Northwest Hwy</span>
+                <span class="span-content">Chicago IL 60631 USA</span>
+                <span class="span-content">Phone: 773-334-5000</span>
+                <span class="span-content">Fax: 773-442-0314</span>
                 <p>
                     <a href="http://www.americanmachinetools.com/RFQ.asp?model=Catalog+and+Saws+Information+Request"><b>Click to email Us</b></a>
                 </p>
             </div>
             <div class="footer-mid">
-                <a href="http://www.americanmachinetools.com/privacy.htm"><b>Privacy Clause</b></a><br/>
+                <span class="span-content"><a href="http://www.americanmachinetools.com/privacy.htm"><b>Privacy Clause</b></a></span>
                 <a href="http://www.americanmachinetools.com/machinery_safety.htm"><b>SAFETY</b></a>
             </div>
             <div class="footer-mid">
-                <a href="http://www.americanmachinetools.com/terms.htm"><b>Terms &amp; Conditions</b></a><br/>
+                <span class="span-content"><a href="http://www.americanmachinetools.com/terms.htm"><b>Terms &amp; Conditions</b></a></span>
                 <a href="http://www.americanmachinetools.com/FAQ.htm" target="FAQ"><b>Frequently Asked Questions</b></a>
             </div>
             <div class="footer-mid">
-                Website by HumCommerce.com<br/>
-                Copyright &copy; 2001-2017<br/>
-                American Machine Tools Co.<br/>
+                <span class="span-content">Website by HumCommerce.com</span>
+                <span class="span-content">Copyright &copy; 2001-2017</span>
+                <span class="span-content">American Machine Tools Co.</span>
                 All Rights Reserved
             </div>
             <div class="footer-end">
-                Information and prices on this website is subject to change without notice.<br/>
-                Offers from American Machine Tools Corporation include Terms and Conditions shown on our website.<br/>
-                Liability is strictly limited to those warranties of fitness for purpose and safety as provided by the manufacturer.<br/>
+                <span class="span-content">Information and prices on this website is subject to change without notice.</span>
+                <span class="span-content">Offers from American Machine Tools Corporation include Terms and Conditions shown on our website.</span>
+                <span class="span-content">Liability is strictly limited to those warranties of fitness for purpose and safety as provided by the manufacturer.</span>
                 Products and Logos in this website are trademarks or registered trademarks of their respective companies or mark holders.
             </div>
         </div>
