Fixed Bug of Header image in m.ironworker.htm

--- a/m.ironworker.htm
+++ b/m.ironworker.htm
@@ -17,7 +17,7 @@
 
 		<div class="header">
 			<div class="header-img">
-				<a href="http://www.americanmachinetools.com/default.htm"><img src="http://www.americanmachinetools.com/images/machine_tools_mobile.jpg" alt="Edwards hydraulic Ironworker machines in many sizes with many options.  CLICK FOR OUR HOMEPAGE."></a>
+				<a href="http://www.americanmachinetools.com/default.htm"><img  style="height:100px;" src="http://www.americanmachinetools.com/images/ironworker_webpage.jpg" alt="Edwards hydraulic Ironworker machines in many sizes with many options.  CLICK FOR OUR HOMEPAGE."></a>
 			</div>
 			<div class="header-content">
 				<h1>Hydraulic Ironworker Machines can replace your drill press and band saw to speed up most jobs:</h1>
